Fixed small issues on ios

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -6,11 +6,8 @@
   width: 96px;
   height: 96px;
 }
-.eighty-w{
-	/*margin-top: 48px !important;*/
-	width: 80%;
-	margin: 0 auto;
-}
-.eighty-w h1{
-	text-align: center;
-}
+/*.bar.bar-dark {
+  
+    background-image: linear-gradient(0deg, #111, #111 100%, transparent 100%) !important;
+    
+}*/
